graphql-parser/tests/snapshots/queries__fail_bad_args.snap
---
source: graphql-parser/tests/query_roundtrips.rs
expression: result
---
Err(
    ParseError(
        "Parse error at 2:10\nUnexpected `[[Punctuator]`\nExpected `Name`\n",
    ),
)
