graphql-parser/tests/snapshots/queries__fail_bad_args_win.snap
---
source: graphql-parser/tests/queries.rs
expression: result_win
---
Err(
    ParseError(
        "Parse error at 2:10\nUnexpected `[[Punctuator]`\nExpected `Name`\n",
    ),
)
