graphql-parser/tests/snapshots/queries__fail_querry.snap
---
source: graphql-parser/tests/query_roundtrips.rs
expression: result
---
Err(
    ParseError(
        "Parse error at 1:1\nUnexpected `querry[Name]`\nExpected `{`, `query`, `mutation`, `subscription` or `fragment`\n",
    ),
)
